core/maven: Resolve pom elements with defined properties.